--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -369,6 +369,9 @@
     #carousel .slick-dots {
         bottom: 30px;
     }
+    .menu a.nav-link, .menu-icons a, select#switcher {
+        color: #fff !important;
+    }
 }
 @media screen and (max-width: 1100px) {
     #carousel button.slick-next.slick-arrow, #carousel button.slick-prev.slick-arrow {
