--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,27 @@
 body {
   margin: 0;
- 
-
-
-}
+ }
 .pagination {
   display: inline-block;
   padding-left: 15px;
   padding-right: 15px;
   cursor: pointer;
   float: right;
-  color: #000;
+  color:#000;
 }
-
 .pagination > li {
   display: inline-block;
   background-color: #fff;
   }
-
 .pagination > li > a {
   float: left;
   padding: 8px 16px;
   text-decoration: none;
-  
+  color:#000;
 }
-
 .pagination > li > a:hover:not(.active) {
   background-color: #720215;
+  color: #fff;
   border-radius: 5px;
 }
 input::-webkit-outer-spin-button,
