--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -82,8 +82,8 @@
 }
 @media screen and (max-width:1440px) {
     .main-banner {
-        background: url(../images/main-banner-background.png);
-        height: 700px;
+        background: url(../images/main-banner-background.jpg);
+        height: 960px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
