--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4277,8 +4277,8 @@ span.bottom-note {
 
 /* NEW HOMEPAGE STYLES STARTS HERE */
 .main-banner {
-  background: url(../images/main-banner-background.png) center/ cover no-repeat;
-  height: 700px;
+  background: url(../images/main-banner-background.jpg) center/ cover no-repeat;
+  height: 960px;
 }
 .abcccc:hover{
   cursor:pointer 
