--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,7 +255,24 @@ span.cart-count {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   filter: invert(1);
 }
+.menuheight{
+  height: 450px;
+}
+.bannerheading{
+  font-size: 45px !important;
+  font-weight: bold !important;
+                      line-height: 150% !important;
+                      font-family: "Soleil_Medium",Helvetica,Arial,sans-serif !important;
+}
+.bannerpara{
+  font-size: 24px !important;
+                      line-height: 36px !important;
+                      font-family: "Soleil",Helvetica,Arial,sans-seri !important;
+}
 
+.tabheight{
+  height: 60px;
+}
 .menu a.nav-link {
   text-transform: uppercase;
   font-size: 14px;
@@ -1207,12 +1224,40 @@ p.testi-para {
 }
 
 /* RESPONSIVE */
+
+@media screen and (max-width: 1290px) {
+  .menuheight{
+    height: 450px;
+  }
+  .tabheight{
+    height: 0px;
+  }
+  .bannerpara{
+    font-size: 19px !important;
+                        line-height: 36px !important;
+                        font-family: "Soleil",Helvetica,Arial,sans-seri !important;
+  }
+  .bannerheading{
+    font-size: 35px !important;
+    line-height: 150% !important;
+
+  }
+}
 @media screen and (max-width: 767px) {
   .feedback-slider-item:after {
     left: 30px;
     right: 30px;
   }
+  .bannerpara{
+    font-size: 16px !important;
+                        line-height: 36px !important;
+                        font-family: "Soleil",Helvetica,Arial,sans-seri !important;
+  }
+  .bannerheading{
+    font-size: 25px !important;
+    line-height: 150% !important;
 
+  }
   .customer-feedback .owl-nav [class*="owl-"] {
     position: absolute;
     top: 50%;
@@ -1229,7 +1274,24 @@ p.testi-para {
     right: 0;
   }
 }
+@media screen and (max-width: 470px) {
+  .menuheight{
+    height: 450px;
+  }
+  .tabheight{
+    height: 0px;
+  }
+  .bannerpara{
+    font-size: 15px !important;
+                        line-height: 36px !important;
+                        font-family: "Soleil",Helvetica,Arial,sans-seri !important;
+  }
+  .bannerheading{
+    font-size: 20px !important;
+    line-height: 150% !important;
 
+  }
+}
 /* HOMEPAGE DISCOUNT OFFER SECTION */
 section.offer {
   padding: 98px 22px 0;
@@ -2025,7 +2087,12 @@ h4.panel-title a {
   padding: 8px 18px;
   margin-top: 6px !important;
 }
-
+.abccc:hover{
+  text-decoration: none;
+  color: #fff !important;
+  background-color: #00E13B !important;
+  transition: .1s color ease-in-out,
+}
 h4.retail-title {
   font-family: "Rubik", sans-serif;
   font-weight: 800;
