--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -83,7 +83,7 @@
 @media screen and (max-width:1440px) {
     .main-banner {
         background: url(../images/homebanner.png);
-        min-height: 360px;
+        min-height: 440px;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -300,6 +300,9 @@
     .menu li.nav-item {
         padding: 0px 4px;
     }
+    .main-banner {
+        min-height: 390px;
+    }    
 }
 @media screen and (max-width:1199px) {
     #herbalist {
@@ -384,6 +387,10 @@
     }
     .menu a.nav-link, .menu-icons a, select#switcher {
         color: #fff !important;
+    }
+    .about-company img {
+        margin: 0 auto;
+        display: table;
     }
 }
 @media screen and (max-width: 1100px) {
@@ -694,7 +701,9 @@
     .featured {
         background: url(../images/Cinnamon.svg) left 5% top 30%/ 100px no-repeat,
                     url(../images/red-hollow.svg) right 6% top 40%/ 35px no-repeat;
+        padding: 0px;
     }
+
     .offer-box {
         margin: 0 auto;
         width: 450px;
@@ -764,6 +773,10 @@
     .inner-baanner, #geo {
         padding: 60px 0;
     }
+    .main-banner {
+        min-height: 350px;
+        background-position: right;
+    }
 }
 @media screen and (max-width: 800px) {
     .pay-with {
@@ -779,6 +792,10 @@
     /* .inner-banner {
         padding: 29px 0;
     } */
+    .main-banner {
+        min-height: 280px;
+        background-size: contain;
+    }
 }
 @media screen and (max-width: 768px) {
     /* .banner-h2 {
