--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,7 +259,7 @@ span.cart-count {
   height: 450px;
 }
 .bannerheading{
-  font-size: 45px !important;
+  font-size: 38px !important;
   font-weight: bold !important;
                       line-height: 150% !important;
                       font-family: 'Open Sans', sans-serif !important;
@@ -1235,27 +1235,47 @@ p.testi-para {
  
   .bannerpara{
     font-size: 19px !important;
-                        line-height: 36px !important;
+                        line-height: 32px !important;
                         font-family: "Soleil",Helvetica,Arial,sans-seri !important;
   }
   .bannerheading{
-    font-size: 35px !important;
+    font-size: 30px !important;
     line-height: 150% !important;
+    font-weight: bolder;
 
   }
 }
+@media screen and (max-width: 1220px) {
+  .bannerheading{
+    font-size: 24px !important;
+    line-height: 150% !important;
+    font-weight: bolder;
+
+  }
+}
+@media screen and (max-width: 980px) {
+  .bannerheading{
+    font-size: 21px !important;
+    line-height: 150% !important;
+    font-weight: bolder;
+
+  }
+}
+
+
 @media screen and (max-width: 920px) {
   .feedback-slider-item:after {
     left: 30px;
     right: 30px;
   }
+  
   .bannerpara{
     font-size: 16px !important;
-                        line-height: 36px !important;
+                        line-height: 26px !important;
                         font-family: "Soleil",Helvetica,Arial,sans-seri !important;
   }
   .bannerheading{
-    font-size: 25px !important;
+    font-size: 20px !important;
     line-height: 150% !important;
 
   }
@@ -1275,6 +1295,49 @@ p.testi-para {
     right: 0;
   }
 }
+@media screen and (max-width: 830px) {
+  .bannerheading{
+    font-size: 18px !important;
+    line-height: 150% !important;
+    font-weight: bolder;
+
+  }}
+  @media screen and (max-width: 747px) {
+    .bannerheading{
+      font-size: 16px !important;
+      line-height: 150% !important;
+      font-weight: bolder;
+
+    }}
+    /* @media screen and (max-width: 670px) {
+      .bannerheading{
+        font-size: 14px !important;
+        line-height: 150% !important;
+        font-weight: bolder;
+
+      }} */
+      /* @media screen and (max-width: 595px) {
+        .bannerheading{
+          font-size: 12px !important;
+          line-height: 150% !important;
+          font-weight: bolder;
+
+        }}
+        @media screen and (max-width: 515px) {
+          .bannerheading{
+            font-size: 11px !important;
+            line-height: 150% !important;
+            font-weight: bolder;
+
+          }}
+          @media screen and (max-width: 475px) {
+            .bannerheading{
+              font-size: 10px !important;
+              line-height: 150% !important;
+              font-weight: bolder;
+
+          
+            }} */
 @media screen and (max-width: 470px) {
   .menuheight{
     height: 450px;
@@ -1284,15 +1347,59 @@ p.testi-para {
   }
   .bannerpara{
     font-size: 15px !important;
-                        line-height: 36px !important;
+                        line-height: 22px !important;
                         font-family: "Soleil",Helvetica,Arial,sans-seri !important;
   }
-  .bannerheading{
-    font-size: 20px !important;
+  /* .bannerheading{
+    font-size: 10px !important;
     line-height: 150% !important;
 
-  }
+  } */
 }
+@media screen and (max-width: 430px) {
+  .bannerpara{
+    font-size: 16px !important;
+                        line-height: 20px !important;
+                        font-family: "Soleil",Helvetica,Arial,sans-seri !important;
+  }
+  /* .bannerheading{
+    font-size: 10px !important;
+    line-height: 150% !important;
+
+  } */
+}
+
+/* @media screen and (max-width: 440px) {
+  .bannerheading{
+    font-size: 9px !important;
+    line-height: 150% !important;
+    font-weight: bolder;
+
+  }} */
+  /* @media screen and (max-width: 395px) {
+    .bannerheading{
+      font-size: 8px !important;
+      line-height: 150% !important;
+      font-weight: bolder;
+
+  
+    }} */
+    /* @media screen and (max-width: 360px) {
+      .bannerheading{
+        font-size: 7px !important;
+        line-height: 150% !important;
+        font-weight: bolder;
+
+    
+      }} */
+      /* @media screen and (max-width: 320px) {
+        .bannerheading{
+          font-size: 6.6px !important;
+          line-height: 150% !important;
+          font-weight: bolder;
+
+      
+        }} */
 /* HOMEPAGE DISCOUNT OFFER SECTION */
 section.offer {
   padding: 98px 22px 0;
