--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -334,10 +334,10 @@
         display: block;
 
     }
-    body .uwy.userway_p1 .uai{
+    /* body .uwy.userway_p1 .uai{
         left: calc(100vw - 17px) !important;
         bottom: 5px !important;
-    }
+    } */
     .dropdown-menu.yahki-dropdown.show, .dropdown-menu {
         background-color: #222222 !important;
         border-color: #222222;
